# simple-web3-app

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/rsa_storage/: Cargo.toml
anchor/programs/rsa_storage/src/: lib.rs
anchor/src/: index.ts  program-exports.ts
src/app/: layout.tsx
src/app/account/: page.tsx
src/app/api/ipfs/: route.ts
src/app/clusters/: page.tsx
src/app/fetch/: page.tsx
src/app/shared/: page.tsx
src/app/upload/: page.tsx
src/components/account/: WalletStatus.tsx  account-list-feature.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/fetch/: DecryptByCID.tsx  ListFiles.tsx
src/components/keymanagement/: RsaKeyManagement.tsx
src/components/setup/: setupPage.tsx
src/components/ui/: GlobalModal.tsx  Hero.tsx  WalletStatus.tsx  globalErrorDisplay.tsx  ui-layout.tsx
src/components/upload/: FileUpload.tsx
src/context/: w3Context.tsx
src/features/common/: copyToClipboard.ts  handleImportWrapper.ts  isWithinTimeRange.ts
src/features/fetch/: fetchUseEffect.ts  fileMemo.ts  handleDecrypt.ts  handleManualFetch.ts
src/features/upload/: handlePrivateKeyDownload.ts  handleRegisterRsaKey.ts  handleUpload.ts
src/hooks/: usePageLoadMetrics.ts  useSolanaProgram.ts  useWalletConnectionWarning.ts
src/lib/: chain.ts  cryptography.ts  helpers.ts  ipfs.ts  metrics.ts  solana.ts  store.ts  types.ts
src/providers/: solana-provider.tsx  w3Context.tsx
src/utils/: chain.ts  cryptography.ts  helpers.ts  ipfs.ts  store.ts  types.ts  web3client.ts
(+12 files in other folders)
